review of effparam

--- a/conclusion.tex
+++ b/conclusion.tex
@@ -24,7 +24,7 @@
 %	often fail to cite the author of the original idea)
 %  * filled the demand for some starting overview of the common structures
 %  * unification of MM and PhC concepts, attempt for clarification of these two terms
-%
+%  * documented the original sieving apparatus
 %  * pointed out the fundamental problems: 
 %      1) losses in available materials, 
 %      2) excessive spatial dispersion in known structures; i.e. the eff-param spectra often 'stick' to the BZ boundary
